Bug 153423 - Formatting: AutoCorrect numbered lists incorrectly starts list with 10
Summary: Formatting: AutoCorrect numbered lists incorrectly starts list with 10
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2023-02-06 21:45 UTC by Alistair Saywell
Modified: 2026-07-06 10:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alistair Saywell 2023-02-06 21:45:25 UTC
If the setting "Bulleted and numbered lists. Bullets: •" is ticked in *Tools > AutoCorrect > AutoCorrect Options > Options* and you try to start a list with `1.` then the list will start with 10, e.g. typing "1. Item 1" gives:
    10. Item 1
    11. Item 2
Discovered in https://ask.libreoffice.org/t/autocorrect-numbered-list-adds-a-0/87428 .
Seems to be recent, does not happen in 7.3.7.2 but does in 7.5.0.3 

New user profile in

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-NZ (en_NZ); UI: en-GB
Calc: CL threaded
Comment 1 Lesline 2023-02-06 23:14:16 UTC
Hello Alistair.

Thanks for reporting the bug.  I was able to reproduce the bug in the unstable version but NOT in the fresh version.  The versions used are:


FOUND IN THIS MASTER VERSION:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a834bbad8295cba0ca88a91a524aad48640271ec
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded



NOT FOUND IN THIS FRESH VERSION:

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


Kind Regards
Comment 2 raal 2023-02-08 16:43:21 UTC
This seems to have begun at the below commit.
Adding Cc: to Justin Luth ; Could you possibly take a look at this one?
Thanks
 560bf372c0bb8af5c22e3148ab9c806d246a0c50 is the first bad commit
commit 560bf372c0bb8af5c22e3148ab9c806d246a0c50
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Aug 11 16:33:17 2022 +0200

    source 727c5ed30f68abc28bb04531b25a1df30810760f

https://git.libreoffice.org/core/+/727c5ed30f68abc28bb04531b25a1df30810760f
Comment 3 Commit Notification 2023-02-08 21:39:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6bc6da1d03327450571b6811e192787ad90ecea2

tdf#153423 tdf#150197: use getToken in proper order

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-02-09 06:12:34 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/cf1eeee2c44302d522fcf3fdd2180dfbb63e7591

tdf#153423 tdf#150197: use getToken in proper order

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-03-07 19:52:31 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1dd68c0eab53c5747dac89ef21723be6831b0ada

tdf#153423: sw_uiwriter6: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.