tdf#153423 tdf#150197: use getToken in proper order

This fixes a LO 7.5 regression from my commit
727c5ed30f68abc28bb04531b25a1df30810760f

getToken steps along the string and consumes it,
so these needed to remain in the same order as
they had been originally. Dumb thing to overlook.

Change-Id: I483980eafb7deb0c224063ad41616bb21ddb2191
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146672
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 6bc6da1d03327450571b6811e192787ad90ecea2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146628
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>